--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <header id="header">w
+    <header id="header">
         <div class="header-block container">
             <div>
                 <a href="index.html"><img src="img/header/logo-header.png" class="logo-header" alt="Логотип ГО ДІМ"></a>
@@ -263,11 +263,11 @@
                     <form class="form" >
                         <input type="text" name="user-name" placeholder="Ваше ім'я">
                         <p class="namef"></p>
-                        <!-- <input type="text" name="user-tel" placeholder="Номер телефону"> -->
+                        <input type="text" name="user-tel" placeholder="Номер телефону">
                         <input type="text" name="user-email" placeholder="Email">
                         <p class="emailf"></p>
-                        <!-- <textarea class="form-message" name="user-message" placeholder="Напишіть Ваше повідомлення"></textarea> -->
-                        <input type='submit' onsubmit='return validate()' value='Отправить форму'><!-- <input class="form-button" type="submit">Надіслати</input> -->
+                        <textarea class="form-message" name="user-message" placeholder="Напишіть Ваше повідомлення"></textarea>
+                        <button class="form-button" type="submit">Надіслати</button>
                         <!-- <p class="contact-form-status"></p> -->
                     </form>
                 </div>
