--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="uk" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content='Громадська організація "Добротвірська ініціативна молодь" | ngodim.com'/>
-    <meta property="og:image" content="https://ngodim.com/img/header/logo-header.png">
+    <meta property="og:image" content="https://***/img/logo.png">
     <meta property="og:description" content="Ми - активна та ініціативна молодь Добротвірської громади. Беремо активну участь у розвитку дітей та молоді нашого містечка і отримуємо від цього задоволення."/>
     <link rel="stylesheet" href="css/header-footer.css">
     <link rel="stylesheet" href="css/index.css">
