--- a/about.html
+++ b/about.html
@@ -2,26 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="uk" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta property="og:title" content='Про нас | Громадська організація "Добротвірська ініціативна молодь" | ngodim.com'/>
+    <meta property="og:image" content="https://***/img/logo.png">
+    <meta property="og:description" content='Дізнайтеся більше про членів та членкинь громадської організації "Добротвірська ініціативна молодь" '/>
+    <link rel="stylesheet" href="css/header-footer.css">
+    <link rel="stylesheet" href="css/about.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400&family=Rubik:wght@300;500&display=swap"
+        rel="stylesheet">
+    <link rel="shortcut icon" href="img/logo.png" type="image/png">
+    <title>Про нас | ГО "ДІМ"</title>
 </head>
 <body>
     <header id="header">
-        <div>
-            <a href="index.html"><img src="img/header/logo-header.png" alt="Логотип ГО ДІМ"></a>
-        </div>
-        <nav>
-            <a href="about.html" target="_blank">Про нас</a>
-            <a href="news.html" target="_blank">Новини</a>
-            <a href="index.html#projects">Заходи</a>
-            <a href="index.html#gallery">Галерея</a>
-            <a href="#footer">Контакти</a>
-        </nav>
-        <div>
-            <a href="https://www.facebook.com/NG0DIM" target="_blank"><img src="img/header/facebook.png" alt="Facebook"></a>
-            <a href="https://www.facebook.com/NG0DIM" target="_blank"><img src="img/header/telegram.png" alt="Telegram"></a>
-            <a href="https://www.instagram.com/ngo__dim/" target="_blank"><img src="img/header/instagram.png" alt="Instagram"></a>
+        <div class="header-block container">
+            <div>
+                <a href="index.html"><img src="img/header/logo-header.png" class="logo-header" alt="Логотип ГО ДІМ"></a>
+            </div>
+            <nav class="nav-header">
+                <a href="about.html" target="_blank">Про нас</a>
+                <a href="news.html" target="_blank">Новини</a>
+                <a href="index.html#projects">Заходи</a>
+                <a href="index.html#gallery">Галерея</a>
+                <a href="#footer">Контакти</a>
+            </nav>
+            <div class="follow-header">
+                <a href="https://www.facebook.com/NG0DIM" target="_blank"><img src="img/header/facebook.png"
+                        alt="Facebook"></a>
+                <a href="https://t.me/ngodim" target="_blank"><img src="img/header/telegram.png" alt="Telegram"></a>
+                <a href="https://www.instagram.com/ngo__dim/" target="_blank"><img src="img/header/instagram.png"
+                        alt="Instagram"></a>
+            </div>
         </div>
     </header>
     <main>
@@ -47,7 +61,7 @@
                 <h2>Наталя Мороз</h2>
                 <img src="" alt="Наталя Мороз">
                 <h4>Заступник голови | 2 роки досвіду</h4>
-                <a href="https://www.facebook.com/profile.php?id=100017375257483" target="_blank"><img src="/img/header/facebook.png" alt="Facebook"></a>
+                <a href="https://www.facebook.com/nataliamoroz009" target="_blank"><img src="/img/header/facebook.png" alt="Facebook"></a>
                 <a href="https://www.instagram.com/" target="_blank"><img src="/img/header/instagram.png" alt="Instagram"></a>
                 <a href="mailto:morozn009@gmail.com">morozn009@gmail.com</a>
             </div>
@@ -105,50 +119,67 @@
                 <h4>Волонтер/аніматор | 4 роки досвіду</h4>
                 <a href="https://www.facebook.com/bohdanosypov1" target="_blank"><img src="/img/header/facebook.png" alt="Facebook"></a>
                 <a href="https://www.instagram.com/__marusynka/" target="_blank"><img src="/img/header/instagram.png" alt="Instagram"></a>
-                <a href="mailto:example@gmail.com">example@gmail.com</a>
+                <a href="mailto:muranets.marichka@gmail.com">muranets.marichka@gmail.com</a>
             </div>
         </div>
     </main>
+    <div class="footer-top"></div>
     <footer id="footer">
         <div>
-            <div>
-                <a href="https://www.facebook.com/NG0DIM" target="_blank"><img src="img/footer/facebook.png" alt="Facebook"></a>
-                <a href="https://www.facebook.com/NG0DIM" target="_blank"><img src="img/footer/telegram.png" alt="Telegram"></a>
-                <a href="https://www.instagram.com/ngo__dim/" target="_blank"><img src="img/footer/instagram.png" alt="Instagram"></a>    
-            </div>
-            <div>
-                <div>
-                    <h3>Номер телефону</h3>
-                    <a href="tel:+380936246541">+38 (093) 62 46 541</a>
+            <div class="footer-follow-contact container">
+                <div class="footer-follow">
+                    <a href="https://www.facebook.com/NG0DIM" target="_blank"><img src="img/footer/facebook.png"
+                            alt="Facebook"></a>
+                    <a href="https://t.me/ngodim" target="_blank"><img src="img/footer/telegram.png" alt="Telegram"></a>
+                    <a href="https://www.instagram.com/ngo__dim/" target="_blank"><img src="img/footer/instagram.png"
+                            alt="Instagram"></a>
                 </div>
-                <div>
-                    <h3>Email</h3>
-                    <a href="mailto:info@ngodim.com">info@ngodim.com</a>
-                </div>
-                <div>
-                    <h3>Адреса</h3>
-                    <a href="https://goo.gl/maps/7nyLetH9xYF3QXfCA">вул. Сагайдачного, 2, Добротвір, Львівська область, 80411</a>
+                <div class="footer-contact">
+                    <div class="footer-contact-card">
+                        <h3>Номер телефону</h3>
+                        <a href="tel:+380936246541">+38 (093) 62 46 541</a>
+                    </div>
+                    <div class="footer-contact-card">
+                        <h3>Email</h3>
+                        <a href="mailto:office@ngodim.com">office@ngodim.com</a>
+                    </div>
+                    <div class="footer-contact-card">
+                        <h3>Адреса</h3>
+                        <a href="https://goo.gl/maps/7nyLetH9xYF3QXfCA">вул. Сагайдачного, 2, Добротвір,<br> Львівська
+                            область, 80411</a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div>
-            <div>
-                <a href="index.html"><img src="img/footer/logo-footer.png" alt="Логотип ГО ДІМ"></a>
-                <h5>Ми - активна та ініціативна молодь Добротвірської громади. Беремо активну участь у розвитку дітей та молоді нашого містечка і отримувати від цього задоволення.</h5>
+            <hr class="footer-line container">
+            <div class="footer-logo-nav-map container">
+                <div class="footer-logo">
+                    <a href="index.html"><img src="img/footer/logo-footer.png" alt="Логотип ГО ДІМ"></a>
+                    <h5>Ми - активна та ініціативна молодь Добротвірської громади. Беремо активну участь у розвитку
+                        дітей та
+                        молоді нашого містечка і отримуємо від цього задоволення.</h5>
+                </div>
+                <div class="footer-menu">
+                    <h3>Меню</h3>
+                    <hr class="menu-line">
+                    <nav class="footer-nav">
+                        <a href="index.html#header">Головна</a>
+                        <a href="about.html" target="_blank">Про нас</a>
+                        <a href="news.html" target="_blank">Новини</a>
+                        <a href="index.html#projects">Заходи</a>
+                        <a href="index.html#gallery">Галерея</a>
+                    </nav>
+                </div>
+                <div class="footer-map">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2553.8570409897034!2d24.382309552014455!3d50.20120307934077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47252f25e69b7af3%3A0x36e7832f3f0b0779!2z0JPRgNC-0LzQsNC00YHRjNC60LAg0L7RgNCz0LDQvdGW0LfQsNGG0ZbRjyAi0JTQvtCx0YDQvtGC0LLRltGA0YHRjNC60LAg0ZbQvdGW0YbRltCw0YLQuNCy0L3QsCDQvNC-0LvQvtC00Ywi!5e0!3m2!1suk!2sua!4v1637004961382!5m2!1suk!2sua"
+                         style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </div>
             </div>
-            <nav>
-                <a href="index.html#header">Головна</a>
-                <a href="about.html" target="_blank">Про нас</a>
-                <a href="news.html" target="_blank">Новини</a>
-                <a href="index.html#projects">Заходи</a>
-                <a href="index.html#gallery">Галерея</a>
-            </nav>
-            <div>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2553.8570409897034!2d24.382309552014455!3d50.20120307934077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47252f25e69b7af3%3A0x36e7832f3f0b0779!2z0JPRgNC-0LzQsNC00YHRjNC60LAg0L7RgNCz0LDQvdGW0LfQsNGG0ZbRjyAi0JTQvtCx0YDQvtGC0LLRltGA0YHRjNC60LAg0ZbQvdGW0YbRltCw0YLQuNCy0L3QsCDQvNC-0LvQvtC00Ywi!5e0!3m2!1suk!2sua!4v1637004961382!5m2!1suk!2sua" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>            </div>
-        </div>
-        <div>
-            <p>© Created by ГО "ДІМ"</p>
-            <p>All rights Reserved</p>
+            <hr class="footer-line container">
+            <div class="created-by container">
+                <p>© Created by ГО "ДІМ"</p>
+                <p>All rights Reserved</p>
+            </div>
         </div>
     </footer>
 </body>
