Finish about html and css

--- a/about.html
+++ b/about.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="uk" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content='Про нас | Громадська організація "Добротвірська ініціативна молодь" | ngodim.com'/>
+    <meta property="og:title"
+        content='Про нас | Громадська організація "Добротвірська ініціативна молодь" | ngodim.com' />
     <meta property="og:image" content="https://***/img/logo.png">
-    <meta property="og:description" content='Дізнайтеся більше про членів та членкинь громадської організації "Добротвірська ініціативна молодь" '/>
+    <meta property="og:description"
+        content='Дізнайтеся більше про команду громадської організації "Добротвірська ініціативна молодь" ' />
     <link rel="stylesheet" href="css/header-footer.css">
     <link rel="stylesheet" href="css/about.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,6 +19,7 @@
     <link rel="shortcut icon" href="img/logo.png" type="image/png">
     <title>Про нас | ГО "ДІМ"</title>
 </head>
+
 <body>
     <header id="header">
         <div class="header-block container">
@@ -39,91 +43,135 @@
         </div>
     </header>
     <main>
-        <h1>Наша команда</h1>
-        <div>
-            <div>
-                <h2>Богдан Осипов</h2>
-                <img src="" alt="Богдан Осипов">
-                <h4>Голова ГО "ДІМ" | 7 років досвіду</h4>
-                <a href="https://www.facebook.com/bohdanosypov1" target="_blank"><img src="/img/header/facebook.png" alt="Facebook"></a>
-                <a href="https://www.instagram.com/bohdanosypov/" target="_blank"><img src="/img/header/instagram.png" alt="Instagram"></a>
-                <a href="mailto:bohdanosypov11@gmail.com">bohdanosypov11@gmail.com</a>
+        <div class="about container">
+            <div class="about-text">
+                <h2>Наша команда</h2>
             </div>
-            <div>
-                <h2>Денис Зуб</h2>
-                <img src="" alt="Денис Зуб">
-                <h4>Заступник голови | 3 роки досвіду</h4>
-                <a href="https://www.facebook.com/profile.php?id=100021978518952" target="_blank"><img src="/img/header/facebook.png" alt="Facebook"></a>
-                <a href="https://www.instagram.com/zubdenys/" target="_blank"><img src="/img/header/instagram.png" alt="Instagram"></a>
-                <a href="mailto:kqlynero@gmail.com">kqlynero@gmail.com</a>
-            </div>
-            <div>
-                <h2>Наталя Мороз</h2>
-                <img src="" alt="Наталя Мороз">
-                <h4>Заступник голови | 2 роки досвіду</h4>
-                <a href="https://www.facebook.com/nataliamoroz009" target="_blank"><img src="/img/header/facebook.png" alt="Facebook"></a>
-                <a href="https://www.instagram.com/" target="_blank"><img src="/img/header/instagram.png" alt="Instagram"></a>
-                <a href="mailto:morozn009@gmail.com">morozn009@gmail.com</a>
-            </div>
-            <div>
-                <h2>Христина Бойцун</h2>
-                <img src="" alt="Христина Бойцун">
-                <h4>Волонтер/старший аніматор | 5 років досвіду</h4>
-                <a href="https://www.facebook.com/khrystyna.hoursin" target="_blank"><img src="/img/header/facebook.png" alt="Facebook"></a>
-                <a href="https://www.instagram.com/boitsun_/" target="_blank"><img src="/img/header/instagram.png" alt="Instagram"></a>
-                <a href="mailto:khrystyna.boitsun2003@gmail.comm">khrystyna.boitsun2003@gmail.com</a>
-            </div>
-            <div>
-                <h2>Оля Згурська</h2>
-                <img src="" alt="Оля Згурська">
-                <h4>Волонтер/старший аніматор | 4 роки досвіду</h4>
-                <a href="https://www.facebook.com/olga.zghurska" target="_blank"><img src="/img/header/facebook.png" alt="Facebook"></a>
-                <a href="https://www.instagram.com/olka_zg/" target="_blank"><img src="/img/header/instagram.png" alt="Instagram"></a>
-                <a href="mailto:zgyrskaolga@gmail.com">zgyrskaolga@gmail.com</a>
-            </div>
-            <div>
-                <h2>Віка Заяць</h2>
-                <img src="" alt="Віка Заяць">
-                <h4>Волонтер/аніматор | 4 роки досвіду</h4>
-                <a href="https://www.facebook.com/bohdanosypov1" target="_blank"><img src="/img/header/facebook.png" alt="Facebook"></a>
-                <a href="https://www.instagram.com/zayatsvikaa/" target="_blank"><img src="/img/header/instagram.png" alt="Instagram"></a>
-                <a href="mailto:zayazayatsvika10@gmail.com">zayazayatsvika10@gmail.com</a>
-            </div>
-            <div>
-                <h2>Віка Муранець</h2>
-                <img src="" alt="Віка Муранець">
-                <h4>Волонтер/аніматор | 4 роки досвіду</h4>
-                <a href="https://www.facebook.com/bohdanosypov1" target="_blank"><img src="/img/header/facebook.png" alt="Facebook"></a>
-                <a href="https://www.instagram.com/v.muranets/" target="_blank"><img src="/img/header/instagram.png" alt="Instagram"></a>
-                <a href="mailto:victorika@gmail.com">victorika@gmail.com</a>
-            </div>
-            <div>
-                <h2>Мар'яна Загодора</h2>
-                <img src="" alt="Мар'яна Загодора">
-                <h4>Волонтер/аніматор | 2 роки досвіду</h4>
-                <a href="https://www.facebook.com/bohdanosypov1" target="_blank"><img src="/img/header/facebook.png" alt="Facebook"></a>
-                <a href="https://www.instagram.com/marianna.zahoroda/" target="_blank"><img src="/img/header/instagram.png" alt="Instagram"></a>
-                <a href="mailto:zahoroda.26@gmail.com">zahoroda.26@gmail.com</a>
-            </div>
-            <div>
-                <h2>Роксолана Демкович</h2>
-                <img src="" alt="Роксолана Демкович">
-                <h4>Волонтер/аніматор | 2 роки досвіду</h4>
-                <a href="https://www.facebook.com/bohdanosypov1" target="_blank"><img src="/img/header/facebook.png" alt="Facebook"></a>
-                <a href="https://www.instagram.com/roksademkovich/" target="_blank"><img src="/img/header/instagram.png" alt="Instagram"></a>
-                <a href="mailto:roksolanademkovic@gmail.com">roksolanademkovic@gmail.com</a>
-            </div>
-            <div>
-                <h2>Марія Муранець</h2>
-                <img src="" alt="Марія Муранець">
-                <h4>Волонтер/аніматор | 4 роки досвіду</h4>
-                <a href="https://www.facebook.com/bohdanosypov1" target="_blank"><img src="/img/header/facebook.png" alt="Facebook"></a>
-                <a href="https://www.instagram.com/__marusynka/" target="_blank"><img src="/img/header/instagram.png" alt="Instagram"></a>
-                <a href="mailto:muranets.marichka@gmail.com">muranets.marichka@gmail.com</a>
+            <div class="about-block">
+                <div class="about-cards">
+                    <div class="about-cards-photo  bohdanosypov"></div>
+                    <h2>Богдан Осипов</h2>
+                    <h4>Голова ГО "ДІМ" | 7 років досвіду</h4>
+                    <div class="about-card-follows">
+                        <a href="https://www.facebook.com/bohdanosypov1" target="_blank"><img
+                                src="/img/header/facebook.png" alt="Facebook"></a>
+                        <a href="https://www.instagram.com/bohdanosypov/" target="_blank"><img
+                                src="/img/header/instagram.png" alt="Instagram"></a>
+                    </div>
+                    <a href="mailto:bohdanosypov11@gmail.com">bohdanosypov11@gmail.com</a>
+                </div>
+                <div class="about-cards">
+                    <div class="about-cards-photo zubdenys"></div>
+                    <h2>Денис Зуб</h2>
+                    <h4>Заступник голови | 3 роки досвіду</h4>
+                    <div class="about-card-follows">
+                        <a href="https://www.facebook.com/profile.php?id=100021978518952" target="_blank"><img
+                                src="/img/header/facebook.png" alt="Facebook"></a>
+                        <a href="https://www.instagram.com/zubdenys/" target="_blank"><img
+                                src="/img/header/instagram.png" alt="Instagram"></a>
+                    </div>
+                    <a href="mailto:kqlynero@gmail.com">kqlynero@gmail.com</a>
+                </div>
+                <div class="about-cards">
+                    <div class="about-cards-photo nataliamoroz"></div>
+                    <h2>Наталя Мороз</h2>
+                    <h4>Заступник голови | 2 роки досвіду</h4>
+                    <div class="about-card-follows">
+                        <a href="https://www.facebook.com/nataliamoroz009" target="_blank"><img
+                                src="/img/header/facebook.png" alt="Facebook"></a>
+                        <a href="https://www.instagram.com/" target="_blank"><img src="/img/header/instagram.png"
+                                alt="Instagram"></a>
+                    </div>
+                    <a href="mailto:morozn009@gmail.com">morozn009@gmail.com</a>
+                </div>
+                <div class="about-cards">
+                    <div class="about-cards-photo khrystynaboitsun"></div>
+                    <h2>Христина Бойцун</h2>
+                    <h4>Волонтер/старший аніматор | 5 років досвіду</h4>
+                    <div class="about-card-follows">
+                        <a href="https://www.facebook.com/khrystyna.hoursin" target="_blank"><img
+                                src="/img/header/facebook.png" alt="Facebook"></a>
+                        <a href="https://www.instagram.com/boitsun_/" target="_blank"><img
+                                src="/img/header/instagram.png" alt="Instagram"></a>
+                    </div>
+                    <a href="mailto:khrystyna.boitsun2003@gmail.comm">khrystyna.boitsun2003@gmail.com</a>
+                </div>
+                <div class="about-cards">
+                    <div class="about-cards-photo zgyrskaolga"></div>
+                    <h2>Оля Згурська</h2>
+                    <h4>Волонтер/старший аніматор | 4 роки досвіду</h4>
+                    <div class="about-card-follows">
+                        <a href="https://www.facebook.com/olga.zghurska" target="_blank"><img
+                                src="/img/header/facebook.png" alt="Facebook"></a>
+                        <a href="https://www.instagram.com/olka_zg/" target="_blank"><img
+                                src="/img/header/instagram.png" alt="Instagram"></a>
+                    </div>
+                    <a href="mailto:zgyrskaolga@gmail.com">zgyrskaolga@gmail.com</a>
+                </div>
+                <div class="about-cards">
+                    <div class="about-cards-photo zayatsvikaa"></div>
+                    <h2>Віка Заяць</h2>
+                    <h4>Волонтер/аніматор | 4 роки досвіду</h4>
+                    <div class="about-card-follows">
+                        <a href="https://www.facebook.com" target="_blank"><img
+                                src="/img/header/facebook.png" alt="Facebook"></a>
+                        <a href="https://www.instagram.com/zayatsvikaa/" target="_blank"><img
+                                src="/img/header/instagram.png" alt="Instagram"></a>
+                    </div>
+                    <a href="mailto:zayazayatsvika10@gmail.com">zayazayatsvika10@gmail.com</a>
+                </div>
+                <div class="about-cards">
+                    <div class="about-cards-photo vikamuranets"></div>
+                    <h2>Віка Муранець</h2>
+                    <h4>Волонтер/аніматор | 4 роки досвіду</h4>
+                    <div class="about-card-follows">
+                        <a href="https://www.facebook.com" target="_blank"><img
+                                src="/img/header/facebook.png" alt="Facebook"></a>
+                        <a href="https://www.instagram.com/v.muranets/" target="_blank"><img
+                                src="/img/header/instagram.png" alt="Instagram"></a>
+                    </div>
+                    <a href="mailto:victorika@gmail.com">victorika@gmail.com</a>
+                </div>
+                <div class="about-cards">
+                    <div class="about-cards-photo marianazahoroda"></div>
+                    <h2>Мар'яна Загодора</h2>
+                    <h4>Волонтер/аніматор | 2 роки досвіду</h4>
+                    <div class="about-card-follows">
+                        <a href="https://www.facebook.com/profile.php?id=100025720577361" target="_blank"><img
+                                src="/img/header/facebook.png" alt="Facebook"></a>
+                        <a href="https://www.instagram.com/marianna.zahoroda/" target="_blank"><img
+                                src="/img/header/instagram.png" alt="Instagram"></a>
+                    </div>
+                    <a href="mailto:zahoroda.26@gmail.com">zahoroda.26@gmail.com</a>
+                </div>
+                <div class="about-cards">
+                    <div class="about-cards-photo roksolanademkovic"></div>
+                    <h2>Роксолана Демкович</h2>
+                    <h4>Волонтер/аніматор | 2 роки досвіду</h4>
+                    <div class="about-card-follows">
+                        <a href="https://www.facebook.com/profile.php?id=100038869656899" target="_blank"><img
+                                src="/img/header/facebook.png" alt="Facebook"></a>
+                        <a href="https://www.instagram.com/roksademkovich/" target="_blank"><img
+                                src="/img/header/instagram.png" alt="Instagram"></a>
+                    </div>
+                    <a href="mailto:roksolanademkovic@gmail.com">roksolanademkovic@gmail.com</a>
+                </div>
+                <div></div>
+                <div class="about-cards">
+                    <div class="about-cards-photo mariamuranets"></div>
+                    <h2>Марія Муранець</h2>
+                    <h4>Волонтер/аніматор | 4 роки досвіду</h4>
+                    <div class="about-card-follows">
+                        <a href="https://www.facebook.com" target="_blank"><img
+                                src="/img/header/facebook.png" alt="Facebook"></a>
+                        <a href="https://www.instagram.com/__marusynka/" target="_blank"><img
+                                src="/img/header/instagram.png" alt="Instagram"></a>
+                    </div>
+                    <a href="mailto:muranets.marichka@gmail.com">muranets.marichka@gmail.com</a>
+                </div>
             </div>
         </div>
     </main>
-    <div class="footer-top"></div>
     <footer id="footer">
         <div>
             <div class="footer-follow-contact container">
@@ -172,7 +220,7 @@
                 <div class="footer-map">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2553.8570409897034!2d24.382309552014455!3d50.20120307934077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47252f25e69b7af3%3A0x36e7832f3f0b0779!2z0JPRgNC-0LzQsNC00YHRjNC60LAg0L7RgNCz0LDQvdGW0LfQsNGG0ZbRjyAi0JTQvtCx0YDQvtGC0LLRltGA0YHRjNC60LAg0ZbQvdGW0YbRltCw0YLQuNCy0L3QsCDQvNC-0LvQvtC00Ywi!5e0!3m2!1suk!2sua!4v1637004961382!5m2!1suk!2sua"
-                         style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
             </div>
             <hr class="footer-line container">
@@ -183,4 +231,5 @@
         </div>
     </footer>
 </body>
+
 </html>
