fix about html and css

--- a/about.html
+++ b/about.html
@@ -156,7 +156,7 @@
                     </div>
                     <a href="mailto:roksolanademkovic@gmail.com">roksolanademkovic@gmail.com</a>
                 </div>
-                <div></div>
+                <div class="about-spase"></div>
                 <div class="about-cards">
                     <div class="about-cards-photo mariamuranets"></div>
                     <h2>Марія Муранець</h2>
