finish news page

--- a/index.html
+++ b/index.html
@@ -260,10 +260,10 @@
                     </div>
                 </div>
                 <div class="contact-form-card">
-                    <form class="form" >
+                    <form class="form" action="#" method="post">
                         <input type="text" name="user-name" placeholder="Ваше ім'я">
                         <p class="namef"></p>
-                        <input type="text" name="user-tel" placeholder="Номер телефону">
+                        <input type="tel" name="user-tel" placeholder="Номер телефону">
                         <input type="text" name="user-email" placeholder="Email">
                         <p class="emailf"></p>
                         <textarea class="form-message" name="user-message" placeholder="Напишіть Ваше повідомлення"></textarea>
