--- a/news.html
+++ b/news.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="uk" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content='Новини | Громадська організація "Добротвірська ініціативна молодь" | ngodim.com'/>
+    <meta property="og:title"
+        content='Новини | Громадська організація "Добротвірська ініціативна молодь" | ngodim.com' />
     <meta property="og:image" content="https://***/img/logo.png">
-    <meta property="og:description" content='Новини громадської організації "Добротвірська ініціативна молодь" '/>
+    <meta property="og:description" content='Новини громадської організації "Добротвірська ініціативна молодь" ' />
     <link rel="stylesheet" href="css/header-footer.css">
     <link rel="stylesheet" href="css/news.css">
+    <link rel="stylesheet" href="css/news-carrousel.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400&family=Rubik:wght@300;500&display=swap"
@@ -41,52 +43,59 @@
         </div>
     </header>
     <main>
-        <div>
-            <div>
-                <img src="/img/news/25.08.2021/photo (1).jpg" alt="">
+        <div class="container">
+            <div class="right-new">
+                <div class="slideshow-container">
+                    <div class="mySlides1">
+                        <img src="/img/news/25.08.2021/photo (1).jpg">
+                    </div>
+                    <div class="mySlides1">
+                        <img src="/img/news/25.08.2021/photo (2).jpg">
+                    </div>
+                    <div class="mySlides1">
+                        <img src="/img/news/25.08.2021/photo (3).jpg">
+                    </div>
+                    <div class="mySlides1">
+                        <img src="/img/news/25.08.2021/photo (4).jpg">
+                    </div>
+                    <div class="mySlides1">
+                        <img src="/img/news/25.08.2021/photo (5).jpg">
+                    </div>
+                    <a class="prev" onclick="plusSlides(-1, 0)">❮</a>
+                    <a class="next" onclick="plusSlides(1, 0)">❯</a>
+                </div>
+                <div class="text">
+                    <div class="centre">
+                    <p class="date">25 серпня 2021 рік</p>
+                    <p class="text-news">Слава Україні!💙💛
+                        Вітаємо всіх з тридцятиріччям нашої неньки! Вчора ми мали можливість долучитися до святкування
+                        Дня Незалежності в смт Добротвір.
+                        Наша команда доклала максимум зусиль, щоб створити незабутнє свято для маленьких патріотів.
+                        Разом ми танцювали та малювали. Діти взяли участь у майстер-класі від Аліни Давидович, показали
+                        своїм знанням на бліц-опитуванні, а також кмітливість в естафетах. Кожна дитина отримала
+                        невеличкий приз за свої старання.
+                        І все це відбулося за підтримки Добротвірської селищної ради.</p>
+                    </div>
+                </div>
             </div>
-            <div>
-                <p>25 серпня 2021 рік</p>
-                <p>
-                    25 серпня 2021 рік
-                    
-                    Слава Україні!💙💛
-                    Вітаємо всіх з тридцятиріччям нашої неньки! Вчора ми мали можливість долучитися до святкування Дня Незалежності в смт Добротвір.
-                    Наша команда доклала максимум зусиль, щоб створити незабутнє свято для маленьких патріотів. Разом ми танцювали та малювали. Діти взяли участь у майстер-класі від Аліни Давидович, показали своїм знанням на бліц-опитуванні, а також кмітливість в естафетах. Кожна дитина отримала невеличкий приз за свої старання.
-                    І все це відбулося за підтримки Добротвірської селищної ради.</p>
+            <hr>
+            <div class="left-news">
+                <div class="text">
+                    <div class="centre">
+                    <p class="date">21 серпня 2021 рік</p>
+                    <p class="text-news">Святкуйте 30-річчя Незалежності України разом з нами🇺🇦</p>
+                </div>
+                </div>
+                <div class="slideshow-container">
+                    <div class="mySlides2">
+                        <img src="/img/news/21.08.2021/photo (1).jpg">
+                    </div>
+
+                    <a class="prev" onclick="plusSlides(-1, 1)">❮</a>
+                    <a class="next" onclick="plusSlides(1, 1)">❯</a>
+                </div>
+            
             </div>
-        </div>
-        <div>
-            <div>
-                <p>21 серпня 2021 рік</p>
-                <p>Святкуйте 30-річчя Незалежності України разом з нами🇺🇦</p>
-            </div>
-            <div>
-                <img src="/img/news/21.08.2021/photo (1).jpg" alt="">
-            </div>
-        </div>
-        <div>
-            <div>
-                <img src="/img/news/05.07.2021/photo (1).jpg" alt="">
-            </div>
-            <div>
-                <p>5 липня 2021 рік</p>
-                <p>Ну от і настав фінальний день нашого табору "Веселі канікули з Богом"😥
-                    Прощатися з дітьми нам завжди важко, але наступного року ми обов'язково зустрінемося знову😍
-                    Останній день пройшов не менш цікаво, як інші. На згадку аніматори подарували дітям листівки з побажаннями. А в свою чергу діти залишили нам багато приємних слів вдячності за цікаво проведений час😊❤
-                    Дякуємо громадській бібліотеці ім. В. Петраха, катехитичній спільноті "Перлинки" та катехиту Марії Лозинській за спільну організацію й проведення табору "Веселі канікули з Богом"!!!.</p>
-            </div>
-        </div>
-        <div>
-            <div>
-                <p>3 липня 2021 рік</p>
-                <p>Шостий день позаду. На жаль, день прощання все ближче.
-                    Погода мінлива, але це не завадило нам розважитися. Ранок за традиції розпочався із катехизації. Діти працювали в командах, грали ігри не лише на швидкість, але й на кмітливість. Наші команди повинні були спустити яйце з другого поверху, але не можемо сказати, що жодне яйце не постраждало. Оскільки дощ завадив нашим планам, подивилися фільм "Чудо", який навчає дітей бути толерантними. Останнім нашим заняттям було виготовлення єктеній, які завтра передамо отцю.</p>
-            </div>
-            <div>
-                <img src="/img/news/04.07.2021/photo (1).jpg" alt="">
-            </div>
-        </div>
     </main>
     <footer id="footer">
         <div>
@@ -136,7 +145,7 @@
                 <div class="footer-map">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2553.8570409897034!2d24.382309552014455!3d50.20120307934077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47252f25e69b7af3%3A0x36e7832f3f0b0779!2z0JPRgNC-0LzQsNC00YHRjNC60LAg0L7RgNCz0LDQvdGW0LfQsNGG0ZbRjyAi0JTQvtCx0YDQvtGC0LLRltGA0YHRjNC60LAg0ZbQvdGW0YbRltCw0YLQuNCy0L3QsCDQvNC-0LvQvtC00Ywi!5e0!3m2!1suk!2sua!4v1637004961382!5m2!1suk!2sua"
-                         style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
             </div>
             <hr class="footer-line container">
@@ -145,7 +154,9 @@
                 <p>All rights Reserved</p>
             </div>
         </div>
+        </div>
     </footer>
+    <script src="js/news-carrousel.js"></script>
 </body>
 
 </html>
