add google tag manager

--- a/news.html
+++ b/news.html
@@ -66,15 +66,17 @@
                 </div>
                 <div class="text">
                     <div class="centre">
-                    <p class="date">25 серпня 2021 рік</p>
-                    <p class="text-news">Слава Україні!💙💛
-                        Вітаємо всіх з тридцятиріччям нашої неньки! Вчора ми мали можливість долучитися до святкування
-                        Дня Незалежності в смт Добротвір.
-                        Наша команда доклала максимум зусиль, щоб створити незабутнє свято для маленьких патріотів.
-                        Разом ми танцювали та малювали. Діти взяли участь у майстер-класі від Аліни Давидович, показали
-                        своїм знанням на бліц-опитуванні, а також кмітливість в естафетах. Кожна дитина отримала
-                        невеличкий приз за свої старання.
-                        І все це відбулося за підтримки Добротвірської селищної ради.</p>
+                        <p class="date">25 серпня 2021 рік</p>
+                        <p class="text-news">Слава Україні!💙💛
+                            Вітаємо всіх з тридцятиріччям нашої неньки! Вчора ми мали можливість долучитися до
+                            святкування
+                            Дня Незалежності в смт Добротвір.
+                            Наша команда доклала максимум зусиль, щоб створити незабутнє свято для маленьких патріотів.
+                            Разом ми танцювали та малювали. Діти взяли участь у майстер-класі від Аліни Давидович,
+                            показали
+                            своїм знанням на бліц-опитуванні, а також кмітливість в естафетах. Кожна дитина отримала
+                            невеличкий приз за свої старання.
+                            І все це відбулося за підтримки Добротвірської селищної ради.</p>
                     </div>
                 </div>
             </div>
@@ -82,9 +84,9 @@
             <div class="left-news">
                 <div class="text">
                     <div class="centre">
-                    <p class="date">21 серпня 2021 рік</p>
-                    <p class="text-news">Святкуйте 30-річчя Незалежності України разом з нами🇺🇦</p>
-                </div>
+                        <p class="date">21 серпня 2021 рік</p>
+                        <p class="text-news">Святкуйте 30-річчя Незалежності України разом з нами🇺🇦</p>
+                    </div>
                 </div>
                 <div class="slideshow-container">
                     <div class="mySlides2">
@@ -94,7 +96,7 @@
                     <a class="prev" onclick="plusSlides(-1, 1)">❮</a>
                     <a class="next" onclick="plusSlides(1, 1)">❯</a>
                 </div>
-            
+
             </div>
     </main>
     <footer id="footer">
