add google tag gtag

--- a/index.html
+++ b/index.html
@@ -5,16 +5,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="uk" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z3E2C1GSSP"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-Z3E2C1GSSP');
+    </script>
     <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-PMBRRCW');</script>
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-PMBRRCW');</script>
     <!-- End Google Tag Manager -->
-    <meta property="og:title" content='Громадська організація "Добротвірська ініціативна молодь" | ngodim.com'/>
+    <meta property="og:title" content='Громадська організація "Добротвірська ініціативна молодь" | ngodim.com' />
     <meta property="og:image" content="https://***/img/logo.png">
-    <meta property="og:description" content="Ми - активна та ініціативна молодь Добротвірської громади. Беремо активну участь у розвитку дітей та молоді нашого містечка і отримуємо від цього задоволення."/>
+    <meta property="og:description"
+        content="Ми - активна та ініціативна молодь Добротвірської громади. Беремо активну участь у розвитку дітей та молоді нашого містечка і отримуємо від цього задоволення." />
     <link rel="stylesheet" href="css/header-footer.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/index-carrousel.css">
@@ -29,8 +42,8 @@
 
 <body>
     <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PMBRRCW"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PMBRRCW" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <header id="header">
         <div class="header-block container">
@@ -277,7 +290,8 @@
                         <input type="tel" name="user-tel" placeholder="Номер телефону">
                         <input type="text" name="user-email" placeholder="Email">
                         <p class="emailf"></p>
-                        <textarea class="form-message" name="user-message" placeholder="Напишіть Ваше повідомлення"></textarea>
+                        <textarea class="form-message" name="user-message"
+                            placeholder="Напишіть Ваше повідомлення"></textarea>
                         <button class="form-button" type="submit">Надіслати</button>
                         <!-- <p class="contact-form-status"></p> -->
                     </form>
@@ -334,7 +348,7 @@
                 <div class="footer-map">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2553.8570409897034!2d24.382309552014455!3d50.20120307934077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47252f25e69b7af3%3A0x36e7832f3f0b0779!2z0JPRgNC-0LzQsNC00YHRjNC60LAg0L7RgNCz0LDQvdGW0LfQsNGG0ZbRjyAi0JTQvtCx0YDQvtGC0LLRltGA0YHRjNC60LAg0ZbQvdGW0YbRltCw0YLQuNCy0L3QsCDQvNC-0LvQvtC00Ywi!5e0!3m2!1suk!2sua!4v1637004961382!5m2!1suk!2sua"
-                         style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
             </div>
             <hr class="footer-line container">
