--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
     <header id="header">
         <div class="header-block container">
             <div>
-                <a href="index.html"><img src="img/header/logo-header.png" class="logo-header" alt="Логотип ГО ДІМ"></a>
+                <a href="#"><img src="img/header/logo-header.png" class="logo-header" alt="Логотип ГО ДІМ"></a>
             </div>
             <nav class="nav-header">
-                <a href="about.html" target="_blank">Про нас</a>
-                <a href="news.html" target="_blank">Новини</a>
+                <a href="about" target="_blank">Про нас</a>
+                <a href="news" target="_blank">Новини</a>
                 <a href="#projects">Заходи</a>
                 <a href="#gallery">Галерея</a>
                 <a href="#footer">Контакти</a>
@@ -78,7 +78,7 @@
             <div class="about-us-text container">
                 <h2>Про нас</h2>
                 <h3>ДІМ - добротвірська ініціативна молодь, яка через спільну <br>
-                    працю, подорожі об'єднуємо молодь громади.</h3>
+                    працю, подорожі об'єднує молодь громади.</h3>
             </div>
             <div class="about-us-blocks container">
                 <div class="about-us-card">
@@ -329,7 +329,7 @@
             <hr class="footer-line container">
             <div class="footer-logo-nav-map container">
                 <div class="footer-logo">
-                    <a href="index.html"><img src="img/footer/logo-footer.png" alt="Логотип ГО ДІМ"></a>
+                    <a href="index"><img src="img/footer/logo-footer.png" alt="Логотип ГО ДІМ"></a>
                     <h5>Ми - активна та ініціативна молодь Добротвірської громади. Беремо активну участь у розвитку
                         дітей та
                         молоді нашого містечка і отримуємо від цього задоволення.</h5>
@@ -339,8 +339,8 @@
                     <hr class="menu-line">
                     <nav class="footer-nav">
                         <a href="#header">Головна</a>
-                        <a href="about.html" target="_blank">Про нас</a>
-                        <a href="news.html" target="_blank">Новини</a>
+                        <a href="about" target="_blank">Про нас</a>
+                        <a href="news" target="_blank">Новини</a>
                         <a href="#projects">Заходи</a>
                         <a href="#gallery">Галерея</a>
                     </nav>
