--- a/news.html
+++ b/news.html
@@ -24,13 +24,13 @@
     <header id="header">
         <div class="header-block container">
             <div>
-                <a href="index.html"><img src="img/header/logo-header.png" class="logo-header" alt="Логотип ГО ДІМ"></a>
+                <a href="index"><img src="img/header/logo-header.png" class="logo-header" alt="Логотип ГО ДІМ"></a>
             </div>
             <nav class="nav-header">
                 <a href="about.html" target="_blank">Про нас</a>
                 <a href="news.html" target="_blank">Новини</a>
-                <a href="index.html#projects">Заходи</a>
-                <a href="index.html#gallery">Галерея</a>
+                <a href="index#projects">Заходи</a>
+                <a href="index#gallery">Галерея</a>
                 <a href="#footer">Контакти</a>
             </nav>
             <div class="follow-header">
@@ -128,7 +128,7 @@
             <hr class="footer-line container">
             <div class="footer-logo-nav-map container">
                 <div class="footer-logo">
-                    <a href="index.html"><img src="img/footer/logo-footer.png" alt="Логотип ГО ДІМ"></a>
+                    <a href="index"><img src="img/footer/logo-footer.png" alt="Логотип ГО ДІМ"></a>
                     <h5>Ми - активна та ініціативна молодь Добротвірської громади. Беремо активну участь у розвитку
                         дітей та
                         молоді нашого містечка і отримуємо від цього задоволення.</h5>
@@ -137,11 +137,11 @@
                     <h3>Меню</h3>
                     <hr class="menu-line">
                     <nav class="footer-nav">
-                        <a href="index.html#header">Головна</a>
-                        <a href="about.html" target="_blank">Про нас</a>
-                        <a href="news.html" target="_blank">Новини</a>
-                        <a href="index.html#projects">Заходи</a>
-                        <a href="index.html#gallery">Галерея</a>
+                        <a href="index#header">Головна</a>
+                        <a href="about" target="_blank">Про нас</a>
+                        <a href="news" target="_blank">Новини</a>
+                        <a href="index#projects">Заходи</a>
+                        <a href="index#gallery">Галерея</a>
                     </nav>
                 </div>
                 <div class="footer-map">
