--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
     <!-- End Google Tag Manager -->
     <meta property="og:title" content='Громадська організація "Добротвірська ініціативна молодь" | ngodim.com' />
     <meta property="og:image" content="https://***/img/logo.png">
-    <meta property="og:description"
-        content="Ми - активна та ініціативна молодь Добротвірської громади. Беремо активну участь у розвитку дітей та молоді нашого містечка і отримуємо від цього задоволення." />
+    <meta property="og:description" content="Ми - активна та ініціативна молодь Добротвірської громади. Беремо активну участь у розвитку дітей та молоді нашого містечка і отримуємо від цього задоволення." />
     <link rel="stylesheet" href="css/header-footer.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/index-carrousel.css">
@@ -37,7 +36,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400&family=Rubik:wght@300;500&display=swap"
         rel="stylesheet">
     <link rel="shortcut icon" href="img/logo.png" type="image/png">
-    <title>ГО "ДІМ"</title>
+    <meta name="description" content="Ми - активна та ініціативна молодь Добротвірської громади. Беремо активну участь у розвитку дітей та молоді нашого містечка і отримуємо від цього задоволення.">
+    <title>Добротвірська ініціативна молодь</title>
 </head>
 
 <body>
