add wayforpay and other

--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
                 <h1>Добротвірська ініціативна молодь</h1>
                 <hr>
                 <h2>Молодіжна громадська організація</h2>
+                <br><br>
+                <a href="https://secure.wayforpay.com/payment/ngodim" class="main-button">Підтримати<span></span></a>
             </div>
         </section>
         <section class="about-us">
@@ -231,21 +233,21 @@
             <h2 class="documents-text">Документи</h2>
             <div class="documents-block container">
                 <div class="documents-card">
-                    <a href="https://drive.google.com/file/d/1wNFZT2YpSGPAW2F1frRjTJvM3WyqVrhb/view?usp=sharing"
+                    <a href="/documents/Статут ГО ДІМ.pdf"
                         target="_blank"><img class="documents-card-img" src="img/index/documents/pdf.png" alt="pdf"></a>
-                    <a href="https://drive.google.com/file/d/1wNFZT2YpSGPAW2F1frRjTJvM3WyqVrhb/view?usp=sharing"
+                    <a href="/documents/Статут ГО ДІМ.pdf"
                         class="documents-card-text" target="_blank">Статут ГО "ДІМ"</a>
                 </div>
                 <div class="documents-card">
-                    <a href="https://drive.google.com/file/d/1I4eKzn3JbQ82_nxK-smeEiNMt4TIWJZf/view?usp=sharing"
+                    <a href="/documents/Протокол засновників ГО ДІМ.pdf"
                         target="_blank"><img class="documents-card-img" src="img/index/documents/pdf.png" alt="pdf"></a>
-                    <a href="https://drive.google.com/file/d/1I4eKzn3JbQ82_nxK-smeEiNMt4TIWJZf/view?usp=sharing"
+                    <a href="/documents/Протокол засновників ГО ДІМ.pdf"
                         class="documents-card-text" target="_blank">Протокол засновників<br>ГО "ДІМ"</a>
                 </div>
                 <div class="documents-card">
-                    <a href="https://drive.google.com/file/d/1rHv85js32ul8umla_hu1q3SdNIqpqnli/view?usp=sharing"
+                    <a href="/documents/Виписка з ЄДР.pdf"
                         target="_blank"><img class="documents-card-img" src="img/index/documents/pdf.png" alt="pdf"></a>
-                    <a href="https://drive.google.com/file/d/1rHv85js32ul8umla_hu1q3SdNIqpqnli/view?usp=sharing"
+                    <a href="/documents/Виписка з ЄДР.pdf"
                         class="documents-card-text" target="_blank">Виписка з ЄДР</a>
                 </div>
             </div>
@@ -297,6 +299,8 @@
                 </div>
             </div>
         </section>
+      
+      
     </main>
     <div class="footer-top"></div>
     <footer id="footer">
