--- a/news.html
+++ b/news.html
@@ -92,6 +92,12 @@
                     <div class="mySlides2">
                         <img src="/img/news/21.08.2021/photo (1).jpg">
                     </div>
+                    <div class="mySlides2">
+                        <img src="/img/news/25.08.2021/photo (2).jpg">
+                    </div>
+                    <div class="mySlides2">
+                        <img src="/img/news/25.08.2021/photo (3).jpg">
+                    </div>
 
                     <a class="prev" onclick="plusSlides(-1, 1)">❮</a>
                     <a class="next" onclick="plusSlides(1, 1)">❯</a>
