--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                 <h1>Добротвірська ініціативна молодь</h1>
                 <hr>
                 <h2>Молодіжна громадська організація</h2>
-                <br><br>
-                <a href="https://secure.wayforpay.com/payment/ngodim" class="main-button">Підтримати<span></span></a>
+                <!-- <br><br>
+                <a href="https://secure.wayforpay.com/payment/ngodim" class="main-button">Підтримати<span></span></a> -->
             </div>
         </section>
         <section class="about-us">
