--- a/index.html
+++ b/index.html
@@ -287,13 +287,13 @@
                     </div>
                 </div>
                 <div class="contact-form-card">
-                    <form class="form" action="#" method="post" id="contact_form">
-                        <input type="text" name="user-name" id="user_name" placeholder="Ваше ім'я">
-                        <input type="email" name="user-email" id="user_email" placeholder="Email">
-                        <input type="tel" name="user-tell" id="user_tell" placeholder="Номер телефону">
-                        <textarea class="form-message" name="user-message" id="user_message"
+                    <form class="form" action="#"  id="forms">
+                        <input type="text" name="name" id="user_name" placeholder="Ваше ім'я">
+                        <input type="email" name="email" id="user_email" placeholder="Email">
+                        <input type="tel" name="tell" id="user_tell" placeholder="Номер телефону">
+                        <textarea class="form-message" name="message" id="user_message"
                             placeholder="Напишіть Ваше повідомлення"></textarea>
-                        <button class="form-button" type="submit">Надіслати</button>
+                        <button type="submit" class="form-button">Надіслати</button>
                         
                     </form>
                 </div>
@@ -364,6 +364,7 @@
     <script src="js/index-carrousel.js"></script>
     <script src="js/index-accordion.js"></script>
     <script src="js/index-listeners.js"></script>
+    <script src="js/formsend.js"></script>
 </body>
 
 </html>
